--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "popper.js": "^1.15.0",
         "rxjs": "~6.4.0",
         "tslib": "^1.10.0",
-        "zone.js": "~0.9.1"
+        "zone.js": "~0.9.1",
+        "ngx-device-detector": "^1.4.0"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.803.8",
